--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,13 +6,20 @@ book:
   title: "Data Management"
   author: "Anton Urfels"
   date: "3/22/2024"
+  sidebar:
+    logo: book-code/CGIAR-IRRI.png
+  
   chapters:
-    - index.qmd
-    - intro.qmd
-    - summary.qmd
-    - references.qmd
+  - index.qmd
+  - part: "Introduction"
+    chapters:
+    - book-code/intro.qmd
+  - part: "Data management workflow"
+    chapters:
+    - book-code/summary.qmd
+  - book-code/references.qmd
 
-bibliography: references.bib
+bibliography: book-code/references.bib
 
 format:
   html:
